apps/podinfo/manifests/service-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-all
  namespace: podinfo
spec:
  selector:
    app: podinfo
  ports:
    - port: 9898
      targetPort: 9898
