apps/podinfo/manifests/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-canary
  namespace: podinfo
spec:
  ports:
    - port: 9898
      targetPort: 9898
      name: http
  selector:
    app: podinfo
