apps/podinfo/manifests/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-lb
  namespace: podinfo
spec:
  type: LoadBalancer
  ports:
    - port: 9898
      targetPort: 9898
      name: http
  selector:
    app: podinfo
