apps/podinfo/manifests/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-stable
  namespace: podinfo
spec:
  ports:
    - port: 9898
      targetPort: 9898
      name: http
  selector:
    app: podinfo
