apps/podinfo/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: podinfo
  namespace: podinfo
spec:
  gatewayClassName: ngrok
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "mifi-podinfo-6d348cc7.ngrok.dev"
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: podinfo
spec:
  parentRefs:
    - name: podinfo
  hostnames:
    - "mifi-podinfo-6d348cc7.ngrok.dev"
  rules:
    - backendRefs:
        - name: podinfo-all
          port: 9898
